# security-engineering-portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  index.md
.github/: dependabot.yml
.github/workflows/: ci.yml
01-linux-hardening/: NEXT-STEPS.md  QUICKSTART.md  README.md  STRUCTURE.md
01-linux-hardening/ansible/: README.md  ansible.cfg
01-linux-hardening/ansible/inventory/: hosts.yml
01-linux-hardening/design/: phase1-design.md
01-linux-hardening/docs/: implementation.md
01-linux-hardening/pki/: README.md  find-certificate.sh  inspect-trust-store.sh  validate-tls-chain.sh
agents/ir-copilot/: .gitignore  Makefile  README.md  pyproject.toml
agents/ir-copilot/data/: ground_truth.jsonl  redteam.jsonl  redteam_expectations.jsonl  transcripts.jsonl
agents/ir-copilot/src/ir_copilot/: agent.py  cli.py  eval.py  llm.py  schema.py
agents/ir-copilot/tests/: test_backends.py  test_redteam_logic.py  test_schema.py
agents/llm-alert-triage/: .gitignore  Makefile  README.md  pyproject.toml
agents/llm-alert-triage/data/: alerts.jsonl  ground_truth.jsonl
agents/llm-alert-triage/src/alert_triage/: agent.py  cli.py  eval.py  llm.py  mcp_client.py  schema.py
agents/llm-alert-triage/tests/: test_backends.py  test_mcp_tools.py  test_schema.py
agents/mcp-security-tooling/: .gitignore  Dockerfile.siem  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/mcp-security-tooling/data/: alerts.jsonl  events.jsonl  hosts.jsonl  indicators.jsonl
agents/mcp-security-tooling/docs/: demo.cast
agents/mcp-security-tooling/src/mcp_security_tooling/: audit.py  demo.py  server.py
agents/mcp-security-tooling/src/siem_mock/: app.py
agents/mcp-security-tooling/tests/: conftest.py  test_e2e.py
detection/detection-as-code/: .gitignore  Makefile  README.md  pyproject.toml
detection/detection-as-code/rules/command_and_control/T1105_curl_pipe_bash/: rule.yml  should_match.jsonl  should_not_match.jsonl
detection/detection-as-code/rules/credential_access/T1003.001_lsass_dump/: rule.yml  should_match.jsonl  should_not_match.jsonl
detection/detection-as-code/rules/execution/T1059.001_encoded_powershell/: rule.yml  should_match.jsonl  should_not_match.jsonl
detection/detection-as-code/rules/lateral_movement/T1021.002_admin_share_access/: rule.yml  should_match.jsonl  should_not_match.jsonl
detection/detection-as-code/rules/persistence/T1053.005_scheduled_task/: rule.yml  should_match.jsonl  should_not_match.jsonl
detection/detection-as-code/src/detection_as_code/: cli.py  lint.py  loader.py  navigator.py  purple_team.py  sigma_runtime.py
detection/detection-as-code/tests/: test_corpus.py  test_sigma_runtime.py
foundations/linux-hardening-role/: .gitignore  README.md
foundations/linux-hardening-role/ansible/: README.md
foundations/linux-hardening-role/ansible/inventory/: hosts.yml
foundations/linux-hardening-role/ansible/playbooks/: harden.yml  rollback.yml
foundations/linux-hardening-role/docs/: hardening-checklist.md  implementation.md
foundations/linux-hardening-role/scripts/: baseline-assessment.sh  compare-lynis.sh  post-hardening-validation.sh
notes/: _TEMPLATE.md  resume-blurbs.md
notes/runbooks/: llm-box-rebuild.md
notes/writeups/: cross-provider-prompt-asymmetry.md  shipping-ai-augmented-secops.md
(+14 files in other folders)
