[project]
name = "ir-copilot"
version = "0.1.0"
description = "LLM copilot that turns synthetic incident-channel transcripts into structured IR docs, with prompt-injection resistance verified by a red-team eval set."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.50.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ir_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
